--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </head>
     <body style="height: 100vh; overflow: hidden">
         <div id="root"></div>
-        <script type="module" src="/src/main.tsx"></script>
+        <script type="module" src="/telegram-mini-app/src/main.tsx"></script>
     </body>
 </html>
